images added to tiles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
 
 :root {
   --primary-color: #39493f;
-  --primary-font-color: red;
+  --primary-font-color: #ffffff;
   --secondary-color: #024e76;
   --tertiary-color: #760253;
   --header-width: 200px; /*  same width of the header everywhere */
@@ -24,13 +24,14 @@ body {
 h1 {
     width: var(--header-width);
     flex-basis: content;
-    flex-grow: 0;
-    font-weight: bold;
+    font-weight: bold;   
+    flex-shrink: 0; 
     font-size: 36px;
     color: var(--primary-font-color);
     margin: 0;
-    border-right: 3px solid var(--primary-font-color);  
+    border-right: 3px solid var(--primary-font-color);    
   }
+
 
 
 /*-------------------------
@@ -45,7 +46,9 @@ header{
   flex-wrap: wrap;
   top: 0;
 }
-
+p{
+    margin: 5px;
+}
 
 
 header a {
@@ -106,69 +109,93 @@ header nav ul li a:hover {
     justify-content: space-between;
     flex-wrap: wrap;
     top: 0;
-    
-    
   }
 
 
  .about p{
     flex: 1 0;
     padding: 0 15px    
-
  }
 
 /*-----------
  Work Section
  ----------*/
 
+
 .work {
     display: flex;
     padding: 20px 35px;
     background-color: var(--primary-color); 
     justify-content: space-between;
-    flex-wrap: wrap;
-    top: 0;
-    
+    top: 0; 
     
   }
 
-
-  
-
+  .work h1{
+      flex-shrink: 0;
+  }
 /* Image tile work section */
 
 .container{
-    height: 500;
-    width: 500;
+   
+    display: flex; 
+    flex-wrap: wrap;
+    
 }
 
 .tile-container{
 
-      display: flex; 
-      flex-wrap: wrap;
-      /* grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));     
-      grid-auto-rows: 240px; */
-      
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    flex: 1 1;
+    flex-direction: row-reverse;
+
   }
 
-.tile-container div {
+  .tile-container .image {
     display:flex;
     justify-content: center;
+
     align-items: center;
+    margin: 5px;  
     border: #024e76 solid 3px;
     width: 200px;
-    height: 200px   
+    height: 200px;
+    
+       
 }
 
-.tile-container img{
-    width: 200px;
-    height: 200px   
+
+/* Images in the tiles */
+.image-1{
+    background-image: url("../images/emerald-lake-closeup.jpeg");
+}
+.image-2{
+    background-image: url("../images/geyser.jpeg");
+}
+.image-3{
+    background-image: url("../images/nevada-road-smoke.jpeg");
+}
+.image-4{
+    background-image: url("../images/tree-center.jpeg");
+}
+.image-l{
+    background-image: url("../images/twin-falls-bridge.jpeg");
 }
 
-.tile-container img .image-3{
-    width: 300px;
-    height: 400px;
-}
+/* Tile image formatting */
+.image {
+    width: 100%;
+    min-height: 300px; 
+    background-size: cover;
+    display: flex;
+    padding: 15px;
+    align-items: flex-end;
+    position: relative;
+    overflow: hidden;
+   
+  }
 
 /*------------- 
 Contact section
@@ -191,7 +218,8 @@ Contact section
   
   .contact nav {
     margin: 7px 0px;
-    width: calc(100% - var(--header-width)); 
+    flex: 1 0;
+    
   }
   
   .contact nav ul {
@@ -207,7 +235,7 @@ Contact section
     font-weight: lighter;
     font-size: 1.55vw;
     padding: 15px;
-    flex: 0 1;
+    
   
   }
   
@@ -218,3 +246,24 @@ Contact section
     text-shadow: none;
   }
   
+  /* ----------
+  Media Queries
+  ---------- */
+  
+  
+
+  @media screen and (max-width: 980px){
+    /* put the tiles under the heading when screen is small */
+    .work {
+        flex-wrap: wrap;
+    }
+ 
+    /* put the tiles and content under the heading when screen is small */  
+    h1{
+        width: 100%;
+        border: none;
+        font-size: 26px;
+        border-bottom: 3px solid var(--primary-font-color);  
+    }
+  
+}
