--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,9 @@ h1 {
     border-right: 3px solid var(--primary-font-color);    
   }
 
-
+p {
+    margin: 5px;
+  }
 
 /*-------------------------
  Header and nav bar styling
@@ -46,9 +48,7 @@ header{
   flex-wrap: wrap;
   top: 0;
 }
-p{
-    margin: 5px;
-}
+
 
 
 header a {
@@ -66,6 +66,7 @@ header nav ul {
   justify-content: space-between;
   align-items: center;
   list-style: none;
+ 
 }
 
 header nav ul li a {
@@ -73,6 +74,7 @@ header nav ul li a {
   font-weight: lighter;
   font-size: 1.55vw;
   padding: 15px;
+ 
 
 }
 
@@ -266,4 +268,12 @@ Contact section
         border-bottom: 3px solid var(--primary-font-color);  
     }
   
+    header nav ul li a, .contact nav ul li a  {
+        margin: 10px 15px;
+        font-weight: lighter;
+        font-size: 15px;
+        padding: 5px;
+   
+  
+  }
 }
