--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,29 +146,11 @@ header nav ul li a:hover {
 }
 
 .tile-container{
-
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    flex: 1 1;
-    flex-direction: row-reverse;
-
   }
-
-  .tile-container .image {
-    display:flex;
-    justify-content: center;
-
-    align-items: center;
-    margin: 5px;  
-    border: #024e76 solid 3px;
-    width: 200px;
-    height: 200px;
-    
-       
-}
-
-
+ 
 /* Images in the tiles */
 .image-1{
     background-image: url("../images/emerald-lake-closeup.jpeg");
@@ -188,7 +170,9 @@ header nav ul li a:hover {
 
 /* Tile image formatting */
 .image {
-    width: 100%;
+    margin: 5px;  
+    border: var(--secondary-color) solid 3px;
+    min-width: 300px;
     min-height: 300px; 
     background-size: cover;
     display: flex;
@@ -196,8 +180,25 @@ header nav ul li a:hover {
     align-items: flex-end;
     position: relative;
     overflow: hidden;
+    transition-duration: 0.5s;
    
   }
+
+  .image-l {   
+    flex:1 0 20%;   
+    order: 1; 
+    transition-duration: 0.5s;
+    align-self: flex-start;
+  }
+
+  .image:hover{
+      content: "";
+      background-image: url("../images/run-buddy-screen.png");
+      /* background: linear-gradient(rgba(252, 56, 66, 0.3), var(--secondary-color)); */
+      border-radius: 20px;
+      z-index: 9999;
+  }
+
 
 /*------------- 
 Contact section
@@ -237,8 +238,6 @@ Contact section
     font-weight: lighter;
     font-size: 1.55vw;
     padding: 15px;
-    
-  
   }
   
   .contact nav ul li a:hover {
@@ -252,8 +251,6 @@ Contact section
   Media Queries
   ---------- */
   
-  
-
   @media screen and (max-width: 980px){
     /* put the tiles under the heading when screen is small */
     .work {
