--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,7 +72,7 @@ header nav ul {
 header nav ul li a {
   margin: 10px 15px;
   font-weight: lighter;
-  font-size: 1.55vw;
+  font-size: 1.25vw;
   padding: 15px;
  
 
@@ -93,7 +93,7 @@ header nav ul li a:hover {
   background-image: url("../images/hero-car.jpeg");
   background-size: cover;
   background-position: right;
-  height: 300px;
+  height: 400px;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -173,7 +173,7 @@ header nav ul li a:hover {
     margin: 5px;  
     border: var(--secondary-color) solid 3px;
     min-width: 300px;
-    min-height: 300px; 
+    height: 300px; 
     background-size: cover;
     display: flex;
     padding: 15px;
@@ -189,6 +189,7 @@ header nav ul li a:hover {
     order: 1; 
     transition-duration: 0.5s;
     align-self: flex-start;
+    min-height: 400px;
   }
 
   .image:hover{
@@ -236,7 +237,7 @@ Contact section
   .contact nav ul li a {
     margin: 10px 15px;
     font-weight: lighter;
-    font-size: 1.55vw;
+    font-size: 1.25vw;
     padding: 15px;
   }
   
@@ -270,7 +271,9 @@ Contact section
         font-weight: lighter;
         font-size: 15px;
         padding: 5px;
-   
-  
-  }
+    }
+
+    .hero{
+    height: 250px;
+    }  
 }
