--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,7 +74,6 @@ header nav ul li a {
   font-weight: lighter;
   font-size: 1.25vw;
   padding: 15px;
- 
 
 }
 
@@ -113,11 +112,37 @@ header nav ul li a:hover {
     top: 0;
   }
 
-
- .about p{
+ .about-container{    
     flex: 1 0;
-    padding: 0 15px    
+    padding: 0 10px;
+    display:flex;
+    justify-content: flex-start;    
  }
+
+
+ .about ul {
+ 
+    list-style: none;
+   
+  }
+  
+  .about ul li{
+    margin: 10px 15px;
+    font-weight: lighter;
+    
+    padding: 15px;
+  
+  }
+.about-item{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin: 5px;  
+    border: var(--secondary-color) solid 3px;
+    width: 300px;
+    height: 300px; 
+}
 
 /*-----------
  Work Section
@@ -148,6 +173,7 @@ header nav ul li a:hover {
 .tile-container{
     display: flex;
     flex-wrap: wrap;
+    flex-direction: row-reverse;
     justify-content: space-around;
   }
  
@@ -189,12 +215,22 @@ header nav ul li a:hover {
    
   }
 
+
+
+
   .image-l {   
     flex:1 0 20%;   
-    order: 1; 
+    order: 0; 
     transition-duration: 0.5s;
     align-self: flex-start;
     min-height: 400px;
+  }
+
+  .image:hover{
+    background-color: var(--primary-color);
+    background-image: none;
+    border-radius: 20px;
+    
   }
 
   .image-l:hover{
@@ -208,6 +244,7 @@ header nav ul li a:hover {
     background-image: url("../images/github-svgrepo-com.svg");
     background-color: white;
     border-radius: 20px;
+    
 }
 
 /*------------- 
