--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,8 +114,9 @@ header nav ul li a:hover {
 
  .about-container{    
     flex: 1 0;
-    padding: 0 10px;
+    padding: 0 5px;
     display:flex;
+    flex-wrap: wrap;
     justify-content: flex-start;    
  }
 
@@ -129,11 +130,11 @@ header nav ul li a:hover {
   .about ul li{
     margin: 10px 15px;
     font-weight: lighter;
-    
     padding: 15px;
   
   }
 .about-item{
+    margin: 5px;  
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -142,6 +143,12 @@ header nav ul li a:hover {
     border: var(--secondary-color) solid 3px;
     width: 300px;
     height: 300px; 
+    background-size: cover;
+    transition-duration: .5s;
+}
+
+.Picture-me{
+background-image: url("../images/selfie.jpeg"); 
 }
 
 /*-----------
@@ -149,13 +156,12 @@ header nav ul li a:hover {
  ----------*/
 
 
-.work {
+.work{
     display: flex;
     padding: 20px 35px;
     background-color: var(--primary-color); 
     justify-content: space-between;
     top: 0; 
-    
   }
 
   .work h1{
@@ -163,18 +169,17 @@ header nav ul li a:hover {
   }
 /* Image tile work section */
 
-.container{
-   
+.container{ 
+    padding: 0 5px;
     display: flex; 
     flex-wrap: wrap;
-    
+    justify-content: flex-start;
 }
 
 .tile-container{
     display: flex;
     flex-wrap: wrap;
-    flex-direction: row-reverse;
-    justify-content: space-around;
+    justify-content: flex-start;
   }
  
 .tile-container a{
@@ -225,25 +230,41 @@ header nav ul li a:hover {
     align-self: flex-start;
     min-height: 400px;
   }
+/* -----------------------
+Aaimations-Transformations
+-------------------------*/
 
+
+/* Round the boxes when hover */
   .image:hover{
     background-color: var(--primary-color);
     background-image: none;
+    border-radius: 20px; 
+  }
+
+  .about-item:hover{
+    background-color: var(--primary-color);
     border-radius: 20px;
     
   }
 
   .image-l:hover{
       content: "";
-      background-image: url("../images/run-buddy-screen.png");
-      border-radius: 20px;
+      background-image: url("../images/run-buddy-screen.png"); 
   }
+/* 
+  .Picture-me:hover{
+    content: "";
+    background-image: url("../images/selfie.jpeg"); 
+} */
+
+
 
   .image-m:hover{
     content: "";
     background-image: url("../images/github-svgrepo-com.svg");
     background-color: white;
-    border-radius: 20px;
+    
     
 }
 
